added images and note

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <body>
         <h1>The Recipes in Question</h1>
-        <a href="./recipes/kamjatang.html">Kamjatang</a>
-        <a href="./recipes/kimbap.html">Kimbap</a>
-        <a href="./recipes/xiaolongbao.html"></a>
+        <h3><a href="./recipes/kamjatang.html">Kamjatang</a></h3>
+        <h3><a href="./recipes/kimbap.html">Kimbap</a></h3>
+        <h3><a href="./recipes/xiaolongbao.html">Xiao Long Bao</a></h3>
     </body>
 </html>
