--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Xiao Long Bao</h1>
+    <img src="../images/dumpling.jpg" alt="soup dumpling">
+    <i><p>Note: Image is for food identification, will not be final product</p></i>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
