--- a/recipes/kamjatang.html
+++ b/recipes/kamjatang.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Kamjatang</h1>
+    <img src="../images/kamjatang.jpg" alt="kamjatang">
+    <i><p>Note: Image is for food identification, will not be final product</p></i>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
