--- a/recipes/kamjatang.html
+++ b/recipes/kamjatang.html
@@ -9,6 +9,8 @@
     <h1>Kamjatang</h1>
     <img src="../images/kamjatang.jpg" alt="kamjatang">
     <i><p>Note: Image is for food identification, will not be final product</p></i>
+    <h4>Description</h4>
+    <p>A pork-bone broth soup rich in collagen. It's flavoured with aromatics typical in East Asian cuisine.</p>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
