--- a/recipes/kimbap.html
+++ b/recipes/kimbap.html
@@ -9,6 +9,8 @@
     <h1>Kimbap</h1>
     <img src="../images/kimbap.jpg" alt="kimbap">
     <i><p>Note: Image is for food identification, will not be final product</p></i>
+    <h4>Description</h4>
+    <p>A sushi roll without sushi rice and a different filling</p>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
