--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -9,6 +9,8 @@
     <h1>Xiao Long Bao</h1>
     <img src="../images/dumpling.jpg" alt="soup dumpling">
     <i><p>Note: Image is for food identification, will not be final product</p></i>
+    <h4>Description</h4>
+    <p>Chinese dumpling with drinkable soup</p>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
