--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <body>
         <h1>The Recipes in Question</h1>
         <ul>
-            
-        </ul>
-        <h3><a href="./recipes/kamjatang.html">Kamjatang</a></h3>
-        <h3><a href="./recipes/kimbap.html">Kimbap</a></h3>
-        <h3><a href="./recipes/xiaolongbao.html">Xiao Long Bao</a></h3>
+            <li><a href="./recipes/kamjatang.html">Kamjatang</a></li>
+            <li><a href="./recipes/kimbap.html">Kimbap</a></li>
+            <li><a href="./recipes/xiaolongbao.html">Xiao Long Bao</a></li>
+        </ul>   
     </body>
 </html>
