added ingredients and steps

--- a/recipes/kamjatang.html
+++ b/recipes/kamjatang.html
@@ -6,11 +6,34 @@
     <title>Kamjatang</title>
 </head>
 <body>
-    <h1>Kamjatang</h1>
+    <h1>Kamjatang (easy)</h1>
     <img src="../images/kamjatang.jpg" alt="kamjatang">
     <i><p>Note: Image is for food identification, will not be final product</p></i>
     <h4>Description</h4>
     <p>A pork-bone broth soup rich in collagen. It's flavoured with aromatics typical in East Asian cuisine.</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>pork bone of choice (back, shoulder, neck, butt)</li>
+        <li>water</li>
+        <li>ginger</li>
+        <li>green onion</li>
+        <li>gochujang</li>
+        <li>white pepper</li>
+        <li>soy sauce</li>
+        <li>garlic</li>
+        <li>potato</li>
+        <li>nappa cabbage</li>
+        <li>white radish</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Parboil the bones and wash out the scum after 20 minutes of parboiling.</li>
+        <li>Combine the bones, sliced ginger, sliced green onion (3 in. long), garlic cloves, and white pepper. Cook for as long as wanted (min. 3 hours)</li>
+        <li>In the meantime, peel the potato and slice the nappa cabbage and white radish as desired.</li>
+        <li>When almost done cooking, add gochujang to taste and the potato whole.</li>
+        <li>When the potato is halfway done as desired, add in soy sauce to taste and the other vegetables.</li>
+        <li>Serve in claypot when possible and garnish with green onions.</li>
+    </ol>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
