--- a/recipes/kimbap.html
+++ b/recipes/kimbap.html
@@ -11,6 +11,32 @@
     <i><p>Note: Image is for food identification, will not be final product</p></i>
     <h4>Description</h4>
     <p>A sushi roll without sushi rice and a different filling</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>seaweed sheet</li>
+        <li>rice</li>
+        <li>sesame oil</li>
+        <li>carrot</li>
+        <li>pickled radish</li>
+        <li>2 eggs</li>
+        <li>salt to taste</li>
+        <li>sugar to taste</li>
+        <li>spinach</li>
+        <li>bulgogi</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Cook the rice in a rice cooker.</li>
+        <li>While that cooks, julienne the carrots and pickled radish, and slice up the spinach.</li>
+        <li>Beat 2 eggs, season with sugar and salt to taste.</li>
+        <li>Make the bulgogi.</li>
+        <li>Quickly stir-fry the carrot and spinach separately</li>
+        <li>Make a omelette with the egg and slice it into strips when done</li>
+        <li>When rice is ready, get a square of seaweed and flatten a thin layer of rice on top</li>
+        <li>Lay down the filling ingredients onto the rice.</li>
+        <li>Roll it up like a sushi roll and brush some sesame oil on the outside.</li>
+        <li>Slice into rolls and serve.</li>
+    </ol>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
