--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -11,6 +11,37 @@
     <i><p>Note: Image is for food identification, will not be final product</p></i>
     <h4>Description</h4>
     <p>Chinese dumpling with drinkable soup</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>flour</li>
+        <li>water</li>
+        <li>chicken bones</li>
+        <li>green onions</li>
+        <li>ginger</li>
+        <li>pork shoulder</li>
+        <li>garlic</li>
+        <li>white pepper</li>
+        <li>salt</li>
+        <li>msg</li>
+        <li>soy sauce</li>
+        <li>chinese black vinegar</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Make the soup by combining the chicken bones, some ginger slices, garlic cloves, 
+            and green onion (sliced in 3 inch pieces) in a large pot of boiling water. Boil 
+            for at least 3 hours and extract the soup into a bowl and place it in the fridge. Wait until it solidifies.</li>
+        <li>Get a cleaver and mince the pork shoulder until it is similar to a ground pork consistency.</li>
+        <li>Combine the minced pork shoulder with white pepper, salt, msg, and soy sauce to taste. 
+            Cube the solidified broth and add it into the dumpling filling mixture.</li>
+        <li>In another bowl, make a dough of pliable consistency and knead until soft.</li>
+        <li>Take a small piece of dough and roll it out into a circle</li>
+        <li>Add a small but sizeable amount of filling and pleat it towards the center in a soup dumpling shape</li>
+        <li>Repeat until you run out of filling or dough.</li>
+        <li>Place dumplings into steamer and eyeball their doneness</li>
+        <li>Check doneness by opening and tasting one.</li>
+        <li>When done, serve with soy sauce and vinegar on the side.</li>
+    </ol>
     <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
