forgot to include an ingredient change to soup dumplings

--- a/recipes/xiaolongbao.html
+++ b/recipes/xiaolongbao.html
@@ -32,7 +32,8 @@
             and green onion (sliced in 3 inch pieces) in a large pot of boiling water. Boil 
             for at least 3 hours and extract the soup into a bowl and place it in the fridge. Wait until it solidifies.</li>
         <li>Get a cleaver and mince the pork shoulder until it is similar to a ground pork consistency.</li>
-        <li>Combine the minced pork shoulder with white pepper, salt, msg, and soy sauce to taste. 
+        <li>Make ginger water and mince some more garlic.</li>
+        <li>Combine the minced pork shoulder with ginger water, garlic, white pepper, salt, msg, and soy sauce to taste. 
             Cube the solidified broth and add it into the dumpling filling mixture.</li>
         <li>In another bowl, make a dough of pliable consistency and knead until soft.</li>
         <li>Take a small piece of dough and roll it out into a circle</li>
@@ -40,7 +41,7 @@
         <li>Repeat until you run out of filling or dough.</li>
         <li>Place dumplings into steamer and eyeball their doneness</li>
         <li>Check doneness by opening and tasting one.</li>
-        <li>When done, serve with soy sauce and vinegar on the side.</li>
+        <li>When done, serve with vinegar on the side.</li>
     </ol>
     <a href="../index.html">Back to Homepage</a>
 </body>
